--- a/dashboard/src/style.sass
+++ b/dashboard/src/style.sass
@@ -51,6 +51,20 @@ main
         flex-direction: row
         & + .table-info
             border-top: 2px solid #282828
+        
+        &:first-child
+            .table-label
+                border-radius: 1rem 0 0 0
+            
+            .table-area
+                border-radius: 0 1rem 0 0
+
+        &:last-child
+            .table-label
+                border-radius: 0 0 0 1rem
+            
+            .table-area
+                border-radius: 0 0 1rem 0
             
     &-label
         padding: .7rem
@@ -60,6 +74,7 @@ main
         padding: .7rem
         flex: 2
         border-left: 4px solid #504945
+
 
 #info-one
     display: flex
