added canvas, TODO show robot position

--- a/dashboard/src/style.sass
+++ b/dashboard/src/style.sass
@@ -94,6 +94,11 @@ main
     margin-top: 3rem
     width: 100%
 
+#info-three
+    margin-top: 3rem
+    width: 100%
+    display: flex
+    justify-content: center
 
 #raw-nt
     margin-top: 3rem
