--- a/dashboard/src/style.sass
+++ b/dashboard/src/style.sass
@@ -8,7 +8,7 @@
     box-sizing: border-box
 
 body
-    background-color: #282828
+    background: #282828
 
 .header
     display: flex
@@ -65,6 +65,9 @@ main
             
             .table-area
                 border-radius: 0 0 1rem 0
+        
+    &-area
+        background: #504945
             
     &-label
         padding: .7rem
@@ -106,7 +109,7 @@ main
 
 #raw-nt
     margin-top: 3rem
-    background-color: #1d2021
+    background: #1d2021
     border-radius: 1rem
 
     #raw-title
