--- a/dashboard/src/style.sass
+++ b/dashboard/src/style.sass
@@ -38,7 +38,7 @@ body
 
 main
     color: #ebdbb2
-    padding: 3rem
+    padding: 1rem
     max-width: 960px
     margin: 0 auto
 
@@ -83,7 +83,7 @@ main
     display: flex
     flex-direction: row
     justify-content: space-between
-    column-gap: 2rem
+    column-gap: 1rem
 
     .table
         flex-grow: 2
@@ -101,14 +101,54 @@ main
             width: 120px
             flex: none
 
-#info-two
-    margin-top: 3rem
+#aut-sel
+    display: flex
+    flex-direction: row
+    justify-content: space-between
+    column-gap: 2px
+    margin-top: 1rem
+    height: 4rem
+
+    input
+        display: none
+
+        &:checked+label
+            background: #802
+
+            &:hover
+                background: #913
+    
+    label
+        flex: 1
+        display: flex
+        align-items: center
+        justify-content: center
+        background: #3c3836
+
+        &:hover
+            background: #504845
+
+    &:first-child
+        label
+            border-radius: 1rem 0 0 1rem
+    
+    &:last-child
+        label
+            border-radius: 0 1rem 1rem 0
+    
+    label:first-child, label:last-child
+            border-radius: 1rem
+
+        
+
+#info-field
+    margin-top: 1rem
     width: 100%
     display: flex
     justify-content: center
 
 #raw-nt
-    margin-top: 3rem
+    margin-top: 1rem
     background: #1d2021
     border-radius: 1rem
 
