fixed autonomous selector buttons

--- a/dashboard/src/style.sass
+++ b/dashboard/src/style.sass
@@ -110,8 +110,10 @@ footer
     align-items: center
     flex-direction: row
     justify-content: right
+
 .p-sw-text
     height: 80%
+
 #p-sw-l
     margin-left: 12px
     margin-right: 20px
@@ -119,12 +121,13 @@ footer
     height: 1.5rem
     position: relative
     background: #1d2021
+
 #p-sw
     display: none
+
 #p-sw:checked + #p-sw-s
-    -webkit-transform: translateX(3rem)
-    -ms-transform: translateX(3rem)
     transform: translateX(3rem)
+
 #p-sw-s
     position: absolute
     top: 0
@@ -166,6 +169,9 @@ footer
     width: 100%
     display: flex
     justify-content: center
+
+#autonomous
+    display: none
 
 #raw-nt
     margin-top: 1rem
