--- a/dashboard/src/style.scss
+++ b/dashboard/src/style.scss
@@ -1,4 +1,12 @@
-@import url("https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;500;600;700&family=Lexend+Deca:wght@300;400;600&display=swap");
+@font-face {
+    font-family: "Fira Code";
+    src: url("./font/FiraCode.woff2");
+}
+
+@font-face {
+    font-family: "Lexend Deca";
+    src: url("./font/LexendDeca.ttf");
+}
 
 * {
     margin: 0;
@@ -81,13 +89,12 @@ main {
     width: 100%;
     max-height: 100vh;
     display: grid;
-    grid: 136px 4rem 1rem 377px / // rows
+    grid: 136px 3rem 1rem 377px / // rows
         auto auto 320px 320px 777px; // columns
     grid-gap: 0.5rem;
 }
 
 .table {
-    background: #3c3836;
     border-radius: 1rem;
 
     &-info {
@@ -118,16 +125,14 @@ main {
         }
     }
 
-    &-area {
-        background: #504945;
-    }
-
     &-label {
+        background: #3c3836;
         padding: 0.75rem;
         flex: 3;
     }
 
     &-area {
+        background: #504945;
         padding: 0.75rem;
         padding-left: 1rem;
         flex: 2;
@@ -139,11 +144,30 @@ main {
     display: flex;
     flex-direction: row;
     gap: 0.5rem;
-    .table {
+    > .table {
         flex: 1;
-        > .table-info > .table-label {
-            width: 138px;
-            flex: none;
+
+        > .table-info {
+            > .table-label {
+                width: 138px;
+                flex: none;
+            }
+            > .table-label,
+            > .table-area {
+                border-radius: 0;
+            }
+        }
+
+        &:first-of-type {
+            > .table-info:first-of-type > .table-label {
+                border-radius: 1rem 0 0 0;
+            }
+        }
+
+        &:last-of-type {
+            > .table-info:first-of-type > .table-area {
+                border-radius: 0 1rem 0 0;
+            }
         }
     }
 }
@@ -154,7 +178,6 @@ main {
     flex-direction: row;
     justify-content: space-between;
     column-gap: 2px;
-    height: 4rem;
 
     button {
         flex: 1;
@@ -166,11 +189,11 @@ main {
         color: #ebdbb2;
 
         &:first-of-type {
-            border-radius: 1rem 0 0 1rem;
+            border-radius: 0 0 0 1rem;
         }
 
         &:last-of-type {
-            border-radius: 0 1rem 1rem 0;
+            border-radius: 0 0 1rem 0;
         }
     }
 
