--- a/dashboard/src/style.scss
+++ b/dashboard/src/style.scss
@@ -95,7 +95,7 @@ main {
     max-height: 100vh;
     display: grid;
     grid: 136px 3rem 1rem 377px / // rows
-        auto auto 320px 320px 777px; // columns
+        auto auto 503px 377px 777px; // columnss
     grid-gap: 0.3rem;
 }
 
@@ -214,20 +214,33 @@ main {
 }
 
 .temps {
-    grid-area: 4 / 1 / 5 / 4;
+    grid-area: 4 / 1 / 5 / 3;
     display: flex;
     flex-direction: row;
     text-align: center;
     font-size: 1.2rem;
+    position: relative;
+
+    .spacer-temp {
+        width: 3px;
+        background: #3c3836;
+    }
 }
 
 #Claw {
-    flex: 4;
+    z-index: 100;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: #3c3836;
+    padding: .3rem;
+    border-radius: .3rem;
+    height: 30%;
+    vertical-align: middle;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
     align-items: center;
-    background: #3c3836
 }
 
 .test1, .test2 {
@@ -275,22 +288,14 @@ main {
 }
 
 .cameras {
-    grid-area: -2 / -3 / -1 / -2;
+    grid-area: -2 / -4 / -1 / -2;
     display: grid;
-    grid: 240 137 / 320 320;
+    grid: auto / 503 auto;
     grid-column-gap: 0.3rem;
-}
 
-#cam1 {
-    grid-area: 1 / 1 / 1 / 2;
-}
-
-.cam1-text {
-    grid-area: 2 / 1 / 2 / 2;
-    font-size: 2rem;
-    display: inline;
-    align-self: center;
-    text-align: center;
+    img {
+        min-height: 377px;
+    }
 }
 
 #field-canvas {
