add second camera and fix diff view

--- a/dashboard/src/style.scss
+++ b/dashboard/src/style.scss
@@ -296,6 +296,11 @@ main {
     img {
         min-height: 377px;
     }
+
+    #cam2 {
+        transform: translateX(-100%) rotate(-90deg);
+        transform-origin: top right;
+    }
 }
 
 #field-canvas {
